--- a/src/header/Header_verify.css
+++ b/src/header/Header_verify.css
@@ -1,8 +1,7 @@
 .verify {
-    background-color: white;
-    color: #fff;
-    height: 60px;
-    padding: 25px;
-    padding-top: 135px;
+  background-color: white;
+  color: #fff;
+  height: 60px;
+  padding: 25px;
+  /* padding-top: 135px; */
 }
-
