--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -26,7 +26,7 @@ header {
   display: inline-block;
   width: 35%;
   height: 40px;
-  margin-left: 3%;
+  /* margin-left: 3%; */
   padding-right: 0;
 }
 
@@ -99,8 +99,8 @@ button {
 
 [class*="button"] img {
   float: right;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   filter: opacity(0.5) drop-shadow(0 0 0 #43000a);
 }
 
