--- a/src/verification/Splash.css
+++ b/src/verification/Splash.css
@@ -15,7 +15,7 @@
   border: none;
   border-radius: 20px;
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-  width: 180px;
+  width: 50vw;
   height: 45px;
   padding: 0;
   margin-top: 20px;
