--- a/src/verification/Login.css
+++ b/src/verification/Login.css
@@ -8,6 +8,12 @@
   margin-bottom: 20px;
 }
 
+.form2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .form-box-input-lg {
   width: calc(80vw - 20px);
   height: 40px;
