--- a/src/verification/SignUp.css
+++ b/src/verification/SignUp.css
@@ -1,15 +1,18 @@
 .contents {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .form {
+  width: 80%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .form-box {
-  width: 80vw;
+  width: 100%;
   height: 50px;
   border: solid 1.5px #43000a;
   border-radius: 5px;
@@ -45,6 +48,12 @@
   outline: none;
 }
 
+@media (hover: hover) {
+  .input-field {
+    width: calc(390px * 0.65);
+  }
+}
+
 .submit-btn {
   font-size: 20px;
   font-family: "Pretendard-Regular";
@@ -58,6 +67,12 @@
   margin-top: 30px;
 }
 
+@media (hover: hover) {
+  .submit-btn {
+    width: calc(390px * 0.8);
+  }
+}
+
 #input-dropdown {
   width: 65vw;
   padding: 0;
@@ -68,6 +83,12 @@
   font-size: 15px;
 }
 
+@media (hover: hover) {
+  #input-dropdown {
+    width: calc(390px * 0.65);
+  }
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -76,4 +97,15 @@ select {
 
 select::-ms-expand {
   display: none;
+}
+
+.texts {
+  margin-top: 200px;
+  width: 100%;
+}
+
+.pwd-scripts {
+  font-size: 12px;
+  color: rgba(67, 0, 10, 0.5);
+  padding: 5px 0 0 5px;
 }
