--- a/src/menu/MenuList.css
+++ b/src/menu/MenuList.css
@@ -1,9 +1,10 @@
 .menu-container {
     width: 40%;
-    height: 120px;
+    height: 140px;
     margin: 5px;
     margin-top: 10px;
     padding: 10px;
+    padding-top: 5px;
     display: inline-block;
     font-size: large;
     text-align: center;
@@ -19,16 +20,15 @@
 }
 
 .bookmarkIcon {
-    display: inline-block;
-    vertical-align: top;
+    display: block;
+    float: right;
     padding: 0px;
-    width: 5px;
-    height: 5px;
+    width: 20px;
+    height: 20px;
 }
 
 .bookmark-button {
     padding: 0px;
-    padding-left: 10px;
 }
 
 .menu-wrap {
@@ -49,41 +49,3 @@
     text-align: center;
     text-decoration: none;
 }
-
-
-/*
-[class*="menu-button"] {
-    width: 47%;
-    height: 120px;
-    margin: 5px;
-    margin-top: 10px;
-    padding: 5px;
-    display: inline-block;
-    font-size: larger;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    border: 1px solid #43000A;
-    transition: background-color 0.3s;
-}
-
-[class*="menu-button"]:hover {
-    background-color: #FCCB6F;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-[class*="menu-button"]:active {
-    width: 47%;
-    height: 120px;
-    margin: 5px;
-    margin-top: 10px;
-    padding: 5px;
-    display: inline-block;
-    font-size: larger;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    border: 1px solid #43000A;
-    background-color: #FCCB6F;
-}
-*/
