--- a/src/header/Header_menu.css
+++ b/src/header/Header_menu.css
@@ -1,29 +1,37 @@
 header {
+  display: flex;
+  align-items: flex-end;
+}
+
+.header-menu {
   background-color: white;
   color: #fff;
-  height: 60px;
-  padding-bottom: 25px;
+  width: 100%;
+  height: 75px;
+  /* height: 60px; */
+  padding: 25px;
   /* padding-top: 100px; */
 }
 
 .logo {
-  font-family: "Wanju";
   font-size: 35px;
+  font-weight: bold;
   color: black;
   width: 60%;
-  height: 40px;
+  /* height: 40px; */
   display: inline-block;
 }
 
 .back {
   width: 50%;
+  height: 23px;
   display: inline-block;
   text-decoration: none;
 }
 
 .back-button {
   padding: 0px;
-  font-size: larger;
+  font-size: 20px;
   color: #43000a;
 }
 
@@ -42,7 +50,7 @@ header {
   display: inline-block;
   width: 35%;
   height: 40px;
-  margin-left: 3%;
+  /* margin-left: 3%; */
   padding-right: 0;
 }
 
