--- a/src/header/Header_verify.css
+++ b/src/header/Header_verify.css
@@ -1,7 +1,9 @@
 .verify {
   background-color: white;
   color: #fff;
-  height: 60px;
+  height: 75px;
   padding: 25px;
   /* padding-top: 135px; */
+  display: flex;
+  align-items: flex-end;
 }
