--- a/src/verification/SignUp.css
+++ b/src/verification/SignUp.css
@@ -65,7 +65,7 @@
   width: 80vw;
   height: 45px;
   padding: 0;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 @media (hover: hover) {
@@ -82,6 +82,7 @@
 
   font-family: "Pretendard-Regular";
   font-size: 15px;
+  background-color: white;
 }
 
 @media (hover: hover) {
