--- a/src/cart/Cart.css
+++ b/src/cart/Cart.css
@@ -11,11 +11,52 @@
     background-color: #D9D9D9;
 }
 
-.cart-menu {
+.cart-order {
     display: block;
     padding-top: 15px;
-    padding-bottom: 100px;
+    font-size: large;
+    font-weight: bold;
+    text-align: center;
     overflow: scroll;
+}
+
+.cart-order h3 {
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
+.cart-order-semiTitle {
+    margin-left: 10%;
+}
+
+.cart-order-item {
+    margin: 10px;
+    padding: 5px;
+    font-size: large;
+}
+
+.cart-item-number {
+    display: inline-block;
+}
+
+.cart-item-info {
+    display: inline-block;
+    text-align: right;
+    align-items: center;
+    justify-content: right;
+}
+
+.cart-item-name {
+    display: inline-block;
+}
+
+.cart-item-menu {
+    display: inline-block;
+}
+
+.cart-item-quantity {
+    display: inline-block;
+    float: right;
 }
 
 .order-button {
@@ -25,7 +66,18 @@
     margin: 30px;
     padding: 10px;
     border-radius: 25px;
-    border-color: #FCCB6F;
+    border: 2px solid #FCCB6F;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 50px;
+}
+
+.cart-total {
+    position: fixed;
+    text-align: center;
+    margin: 80px;
+    padding: 10px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -43,4 +95,48 @@
     right: 0;
     bottom: 0;
     height: 50px;
+}
+
+.ReactModal__Overlay {
+    /* 오버레이를 화면에 가득 차게 만들고 크기를 모달 창에 맞게 설정 */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* 오버레이 배경색 설정 */
+    display: flex;
+    justify-content: center; /* 가로 중앙 정렬 */
+    align-items: center; /* 세로 중앙 정렬 */
+}
+
+/* 모달 내용의 스타일 */
+.custom-modal {
+    /* 모달 내용의 크기를 모달 창에 맞게 설정 */
+    width: 80%; /* 모달 내용의 가로 크기를 화면의 80%로 설정 */
+    max-width: 80%; /* 모달 내용의 최대 가로 크기를 화면의 80%로 설정 */
+    max-height: 50%; /* 모달 내용의 최대 높이를 화면의 50%로 설정 */
+    background-color: white; /* 모달 내용의 배경색 설정 */
+    border: none; /* 테두리 제거 */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 그림자 추가 */
+    padding: 20px; /* 내용과 테두리 간격 설정 */
+    box-sizing: border-box; /* 패딩을 포함한 전체 크기로 설정 */
+    text-align: center;
+}
+
+.custom-modal h3 {
+    margin-bottom: 100px;
+}
+
+.custom-modal h2 {
+    margin-bottom: 0px;
+}
+
+.custom-modal h1 {
+    margin-top: 0px;
+}
+
+.custom-modal p {
+    margin-top: 100px;
 }
