--- a/src/tournament/TournamentVoteWin.css
+++ b/src/tournament/TournamentVoteWin.css
@@ -112,3 +112,10 @@
   box-sizing: border-box; /* 패딩을 포함한 전체 크기로 설정 */
   text-align: center;
 }
+
+@media (hover: hover) {
+  .vote-modal-container {
+    width: calc(390px * 0.75);
+    max-width: calc(390px * 0.75);
+  }
+}
